[package]
name = "levarint"
version = "0.1.0"
edition = "2021"
authors = ["fadedbee <crates@fadedbee.com>"]
license = "MIT OR Apache-2.0"
description = "Little-Endian VARiable-length INTeger codec, compatible with no_std."
readme = "README.md"
homepage = ""
publish = false
categories = ["embedded", "no-std"]
keywords = ["varint", "compression"]
documentation = "https://docs.rs/levarint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
