[package]
name = "levarint64"
version = "0.2.2"
edition = "2021"
authors = ["fadedbee <crates@fadedbee.com>"]
license = "MIT OR Apache-2.0"
description = "Little-Endian VARiable-length INTeger codec, compatible with no_std."
readme = "README.md"
homepage = "https://github.com/fadedbee/codecs/tree/main/levarint64"
repository = "https://github.com/fadedbee/codecs/"
publish = true
categories = ["embedded", "no-std"]
keywords = ["varint", "compression"]
documentation = "https://docs.rs/levarint64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
